--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "apexcharts": "^3.36.0",
     "axios": "^0.27.2",
     "framer-motion": "^7.3.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
